// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectHeaderDistrictsList /> should render correctly 1`] = `
Array [
  <li
    className="sc-bdnxRM HxneP ProjectHeaderDistrictsList__DistrictsButton-hEbEQu eHIdgX p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <IconMock
      className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG egDEeE fZkSKg AMDLx icon"
    />
    <p
      className="sc-bdnxRM hELlhr platform__body"
      title="zone 1 "
    >
      zone 1
       
      and-count-other-areas {"count":4}
    </p>
  </li>,
  <div
    aria-label="data_district_list"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ProjectHeaderDistrictsList /> should render correctly when project is archived 1`] = `
Array [
  <li
    className="sc-bdnxRM HxneP ProjectHeaderDistrictsList__DistrictsButton-hEbEQu eHIdgX p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <IconMock
      className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG egDEeE fZkSKg AMDLx icon"
    />
    <p
      className="sc-bdnxRM hELlhr platform__body"
      title="zone 1 "
    >
      zone 1
       
      and-count-other-areas {"count":4}
    </p>
  </li>,
  <div
    aria-label="data_district_list"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ProjectHeaderDistrictsList /> should render correctly with the display of modal 1`] = `
Array [
  <li
    className="sc-bdnxRM HxneP ProjectHeaderDistrictsList__DistrictsButton-hEbEQu eHIdgX p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <IconMock
      className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG egDEeE fZkSKg AMDLx icon"
    />
    <p
      className="sc-bdnxRM hELlhr platform__body"
      title="zone 1 "
    >
      zone 1
       
      and-count-other-areas {"count":4}
    </p>
  </li>,
  <div
    aria-label="data_district_list"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="sc-bdnxRM ctgkbT Modal__ModalContainerInner-gRLtaR"
      onClick={[Function]}
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <div
        className="sc-bdnxRM kudCBW Modal__ModalInner-fNqOda"
        style={
          Object {
            "opacity": 0,
            "transform": "translateY(-20px) translateZ(0)",
          }
        }
      >
        <header
          className="sc-bdnxRM Flex___StyledAppBox-RSPpX fatVBi"
        >
          <div
            className="sc-bdnxRM Flex___StyledAppBox-RSPpX ivpLqZ ModalHeader___StyledFlex-hKsSDj bhUULg"
          >
            count-area {"count":5}
          </div>
          <button
            className="sc-bdnxRM Button__ButtonInner-dWPVNG gwEOTH jfKDDI"
            onClick={[Function]}
            type="button"
          >
            <IconMock
              className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG eRcwCj fZkSKg AMDLx icon"
            />
          </button>
        </header>
        <main
          className="sc-bdnxRM Flex___StyledAppBox-RSPpX fwqGPs"
        >
          <ul
            className="ListGroupFlush__Container-eGshRq kTxvA-D list-group-flush list-group"
            striped={false}
          >
            <li
              className="list-group-item"
            >
              zone 1
            </li>
            <li
              className="list-group-item"
            >
              zone 2
            </li>
            <li
              className="list-group-item"
            >
              zone 3
            </li>
            <li
              className="list-group-item"
            >
              zone 4
            </li>
            <li
              className="list-group-item"
            >
              zone 5
            </li>
          </ul>
        </main>
        <footer
          className="sc-bdnxRM Flex___StyledAppBox-RSPpX fLmEkM"
        >
          <button
            className="sc-bdnxRM Button__ButtonInner-dWPVNG lgfOqf kFclcg"
            onClick={[Function]}
            type="button"
          >
            global.close
          </button>
        </footer>
      </div>
    </div>
  </div>,
]
`;
